[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pylogiclib"
version = "0.0.1"
authors = [
  { name="ITSMijaiL" },
]
description = "A digital logic simulation library."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]

[project.urls]
Homepage = "https://github.com/ITSMijaiL/pylogiclib"
Issues = "https://github.com/ITSMijaiL/pylogiclib/issues"